@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <xsl:stylesheet version="1.0"
                 xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
-                xmlns:tns="http://schema.jqassistant.org/report/v1.8">
+                xmlns:tns="http://schema.jqassistant.org/report/v1.11">
     <xsl:output method="html" version="1.0" encoding="iso-8859-1"
                 indent="yes"/>
     <xsl:template name="content">
