@@ -37,6 +37,9 @@
                                 <schema>
                                     <fileset>
                                         <directory>${project.basedir}/src/main/resources/META-INF/report/xsd</directory>
+                                        <includes>
+                                            <include>jqassistant-report-v1.11.xsd</include>
+                                        </includes>
                                     </fileset>
                                 </schema>
                                 <schema>
