@@ -1,6 +1,9 @@
 = Core Framework
 
 == 1.11.0
+* Added more specific source locations to jQAssistant XML report for improving integration with tools like SonarQube.
++
+NOTE: The updated XML schema is available under https://schema.jqassistant.org/report/jqassistant-report-v1.11.xsd[]
 * Optimized query used for resetting the store.
 
 == 1.10.1
